[ADD] create estate endpoint
