# api.yml
@@ -11,12 +11,41 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: User Service
+  title: Plantation Drone API
   license:
     name: MIT
 servers:
   - url: http://localhost
 paths:
+  /estate:
+    post:
+      summary: The endpoint of creating estate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateEstateRequest"
+      responses:
+        '201':
+          description: Successfully Created
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/CreateEstateResponse"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /hello:
     get:
       summary: This is just a test endpoint to get you started.
@@ -41,6 +70,20 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
+    CreateEstateRequest:
+      type: object
+      required:
+        - width
+        - length
+      properties:
+        width:
+          type: integer
+          x-oapi-codegen-extra-tags:
+            validate: required,gte=1
+        length:
+          type: integer
+          x-oapi-codegen-extra-tags:
+            validate: required,gte=1
     HelloResponse:
       type: object
       required:
@@ -49,6 +92,13 @@ components:
         message:
           type: string
           example: Hello, World!
+    CreateEstateResponse:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: string
     ErrorResponse:
       type: object
       required:
